--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/GestaoVendas.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/GestaoVendas.form
@@ -206,7 +206,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="1e" green="1e" red="1e" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Total a Pagar:"/>
+                    <Property name="text" type="java.lang.String" value="Total da Compra:"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="CodigoCliente5">
