--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/componentes/Menu.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/componentes/Menu.form
@@ -35,8 +35,8 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnMenuClientes" min="-2" pref="100" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="btnMenuGestao" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="240" max="32767" attributes="0"/>
+              <Component id="btnMenuGestao" min="-2" pref="99" max="-2" attributes="0"/>
+              <EmptySpace pref="179" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -53,9 +53,9 @@
                   <Component id="btnMenuProdutos" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="btnMenuConsulta" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="btnMenuClientes" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                  <Component id="btnMenuGestao" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnMenuGestao" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -225,7 +225,16 @@
     </Component>
     <Component class="com.mycompany.autostockcar.view.componentes.Botao" name="btnMenuGestao">
       <Properties>
-        <Property name="text" type="java.lang.String" value="botao1"/>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="e1" red="a3" type="rgb"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="1e" green="1e" red="1e" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Gest&#xe3;o "/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="SansSerif" size="15" style="1"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMenuGestaoActionPerformed"/>
