--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Cadastrop.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Cadastrop.form
@@ -128,13 +128,15 @@
                                               </Group>
                                               <Group type="102" attributes="0">
                                                   <Group type="103" groupAlignment="0" attributes="0">
-                                                      <Component id="jLabel1" alignment="0" min="-2" pref="122" max="-2" attributes="0"/>
-                                                      <Component id="txcodigofab" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
-                                                      <Component id="txidestoque" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
-                                                      <Component id="jLabel8" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
-                                                      <Component id="txvalorcusto" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
-                                                      <Component id="ValorCusto" alignment="0" min="-2" pref="117" max="-2" attributes="0"/>
-                                                      <Component id="ID" alignment="0" min="-2" pref="37" max="-2" attributes="0"/>
+                                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                          <Component id="jLabel1" alignment="0" min="-2" pref="122" max="-2" attributes="0"/>
+                                                          <Component id="txcodigofab" alignment="0" pref="200" max="32767" attributes="0"/>
+                                                          <Component id="txvalorcusto" alignment="0" pref="200" max="32767" attributes="0"/>
+                                                          <Component id="ValorCusto" alignment="0" min="-2" pref="117" max="-2" attributes="0"/>
+                                                          <Component id="ID" alignment="0" min="-2" pref="37" max="-2" attributes="0"/>
+                                                      </Group>
+                                                      <Component id="txQuantidadeEstoque" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
+                                                      <Component id="ValorCusto3" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
                                                   </Group>
                                                   <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
                                               </Group>
@@ -260,11 +262,7 @@
                               </Group>
                           </Group>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <Component id="txvalorcusto" min="-2" pref="30" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                                  <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="txvalorcusto" min="-2" pref="30" max="-2" attributes="0"/>
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="txvalorvendasemimposto" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
@@ -278,14 +276,15 @@
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="ValorCusto3" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="txidestoque" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                               <Component id="txPrateleira" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                               <Component id="txgaveta" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Component id="txQuantidadeEstoque" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                           <Component id="Complemento" min="-2" max="-2" attributes="0"/>
@@ -722,34 +721,6 @@
                     <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
                   </AuxValues>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel8">
-                  <Properties>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="SansSerif" size="15" style="1"/>
-                    </Property>
-                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="1e" green="1e" red="1e" type="rgb"/>
-                    </Property>
-                    <Property name="text" type="java.lang.String" value="ID do Estoque"/>
-                  </Properties>
-                </Component>
-                <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txidestoque">
-                  <Properties>
-                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="0" green="0" red="0" type="rgb"/>
-                    </Property>
-                    <Property name="cor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="cd" green="bf" red="83" type="rgb"/>
-                    </Property>
-                    <Property name="dicas" type="java.lang.String" value="  "/>
-                    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[64, 30]"/>
-                    </Property>
-                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[143, 30]"/>
-                    </Property>
-                  </Properties>
-                </Component>
                 <Component class="com.mycompany.autostockcar.view.componentes.Botao" name="btlimpar">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -885,6 +856,28 @@
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btcategoriaActionPerformed"/>
                   </Events>
+                </Component>
+                <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txQuantidadeEstoque">
+                  <Properties>
+                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="0" green="0" red="0" type="rgb"/>
+                    </Property>
+                    <Property name="cor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="cd" green="bf" red="83" type="rgb"/>
+                    </Property>
+                    <Property name="dicas" type="java.lang.String" value="Quantidade"/>
+                  </Properties>
+                </Component>
+                <Component class="javax.swing.JLabel" name="ValorCusto3">
+                  <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="SansSerif" size="15" style="1"/>
+                    </Property>
+                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="1e" green="1e" red="1e" type="rgb"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" value="Quantidade Estoque:"/>
+                  </Properties>
                 </Component>
               </SubComponents>
             </Container>
