--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Client.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Client.form
@@ -360,7 +360,7 @@
             <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txCpf">
               <Properties>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="0" green="0" red="0" type="rgb"/>
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="cor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -681,7 +681,7 @@
                 </Property>
                 <Property name="dicas" type="java.lang.String" value=""/>
                 <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="0" green="0" red="0" type="rgb"/>
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="opaque" type="boolean" value="true"/>
               </Properties>
